--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "bunx --bun vite",
+    "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -13,12 +13,14 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "@swc/core-win32-x64-msvc": "^1.12.9",
     "@tailwindcss/vite": "^4.1.10",
     "@types/leaflet": "^1.9.19",
     "@types/ngeohash": "^0.6.8",
     "appwrite": "^18.1.1",
     "axios": "^1.10.0",
     "leaflet": "^1.9.4",
+    "lightningcss-win32-x64-msvc": "^1.30.1",
     "ngeohash": "^0.6.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
